--- a/media/styles.css
+++ b/media/styles.css
@@ -2,7 +2,6 @@ body,
 html {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     height: 100%;
     width: 100%;
@@ -16,7 +15,13 @@ html {
     background-color: #1f1f1f;
 }
 
+.login-wrapper {
+    justify-content: center;
+    align-items: center;
+}
+
 .login-container {
+    justify-content: center;
     background: #202020;
     padding: 2rem;
     border-radius: 8px;
@@ -359,10 +364,11 @@ code {
 
 .fixed-bottom {
     position: fixed;
-    bottom: 0;
+    bottom: 220px;
     left: 0;
     right: 0;
     width: 100%;
+    z-index: 9999999;
 }
 
 .min-w-150px {
@@ -489,10 +495,9 @@ button:active {
     width: auto;
     /* Allow the message to take its natural width */
     max-width: 100%;
-    margin-top: 10px;
     font-size: 14px;
     overflow-y: auto;
-    height: calc(100% - 80px);
+    height: calc(100% - 300px);
     width: 100%;
     margin-bottom: 50px;
     overflow-wrap: break-word;
@@ -509,10 +514,9 @@ button:active {
     /* Limit the maximum width */
     padding: 1rem;
     box-sizing: border-box;
-    background-color: #e2e8f0;
+    color: #f1f1f1 !important;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    margin-top: 1rem;
     overflow-wrap: break-word;
     /* Break long words */
     word-wrap: break-word;
@@ -577,4 +581,64 @@ button:active {
         stroke-dasharray: 90, 150;
         stroke-dashoffset: -124;
     }
+}
+
+canvas {
+    display: block;
+}
+
+.container {
+    width: 100%;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    z-index: 1;
+    /* Pastikan tombol berada di atas canvas */
+}
+
+.trigger-button {
+    width: 100%;
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    z-index: 1;
+}
+
+#avatar {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 250px;
+    height: 250px;
+    z-index: 99999;
+}
+
+.h-12.p-2.flex.items-center.justify-center.bg-red-500.hover\:bg-red-600.text-white.rounded {
+    height: 3rem;
+    /* 48px */
+    padding: 0.5rem;
+    /* 8px */
+    display: flex;
+    /* Flexbox layout */
+    align-items: center;
+    /* Center items vertically */
+    justify-content: center;
+    /* Center items horizontally */
+    background-color: #f56565;
+    /* Red background */
+    transition: background-color 0.3s;
+    /* Smooth transition for hover effect */
+}
+
+.h-12.p-2.flex.items-center.justify-center.bg-red-500.hover\:bg-red-600.text-white.rounded:hover {
+    background-color: #c53030;
+    /* Darker red on hover */
+    cursor: pointer;
+    /* Change cursor to pointer on hover */
+}
+
+.fixed-button {
+    position: fixed;
+    left: 50px;
+    bottom: 50px;
 }
